# ling

./: Cargo.toml  README.md  TODO.md
samples/: expr.ling  stuff.ling
src/: ast.rs  chunk.rs  constants.rs  diagnostic.rs  main.rs  module_compiler.rs  symbol_table.rs  utils.rs  value.rs
src/lexer/: mod.rs  token.rs
src/module_compiler/: module_tree.rs
src/module_compiler_v2/: mod.rs  module_tree.rs
src/parser/: expr.rs  item.rs  lexer.rs  mod.rs  span.rs  token.rs
src/parser/snapshots/: ling__parser__expr__tests__add_if.snap  ling__parser__expr__tests__add_mul.snap  ling__parser__expr__tests__elif.snap  ling__parser__expr__tests__group.snap  ling__parser__expr__tests__group_err.snap  ling__parser__expr__tests__if_expr.snap  ling__parser__expr__tests__invalid_accessor.snap  ling__parser__expr__tests__l_assoc.snap  ling__parser__expr__tests__method_call.snap  ling__parser__expr__tests__mul_add.snap  ling__parser__expr__tests__mul_pow.snap  ling__parser__expr__tests__pow_mul.snap  ling__parser__expr__tests__r_assoc.snap  ling__parser__expr__tests__trailing_else.snap  ling__parser__expr__tests__unit.snap  ling__parser__item__tests__assignment.snap  ling__parser__item__tests__block_empty.snap  ling__parser__item__tests__block_errors.snap  (+43 more)
src/passes/: mod.rs  name_res.rs  resolve_names.rs  visitor.rs
src/source/: db.rs  iter.rs  mod.rs  path.rs  path2.rs  source_db.rs  span.rs
src/syntax/: ast.rs  lexer.rs  mod.rs  token.rs  token_stream.rs  token_tree.rs
src/syntax/parser/: ast.rs  (+4 more)
src/token_stream/: builder.rs  mod.rs
src/token_tree/: builder.rs  mod.rs
(+86 files in other folders)
