[package]
name = "ling"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
macro_rules_attribute = "0.1.3"
minimal-lexical = "0.2.1"
ustr = { version = "0.9.0", features = ["serialization"] }

ron = "0.8.0"
serde = { version = "1.0.154", features = ["derive"] }

[dev-dependencies]
insta = { version = "1.28.0", features = ["ron"] }

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3
